         the Deb inventory
       * Add fusioninventory-injector
       * Split Tools::getIpDhcp() in findDhcpLeaseFile() and
         parseDhcpLeaseFile() and add a test
       * Move screen EDID parsing functions in
         FusionInventory::Agent::Tools::Generic::Screen
       * FreeBSD: do not ignore virtual interface but use the VIRTUALDEV flag on them

2.1.8
       * Linux, correctly read the number of core from /proc/cpuinfo
       * MacOSX: KB unit in missing in Mac OS X Drive.pm
         http://forge.fusioninventory.org/issues/521
       * FusionInventory::Agent::Task::Base, correctly preinitialize
         'myData' by loading the expected file.
       * A yum plugin in contrib to trigger FusionInventory after the updates
         (Remi COLLET)
       * SSL certificat check: Accept wild card in the hostname
         http://forge.fusioninventory.org/issues/542
       * Linux/CPU: avoid a warning is $serial is undef, thanks Raúl who
         pointed the issue
       * SSL: try to use the default CA if now --ca-cert-* is avalaible,
         thanks Kevin Cousin who suggested the idea
       * Inventory must be run after the deployment (OcsDeploy)
       * Linux: fix Knoppix version format
       * fix month number in process list start date
       * Avoid failure if the agent can't load the .dump file, see: #542
         thanks Kevin Cousin for the report
       * Decrease the severity of the error message when a optional module
         is missing
       * MacOSX/Drives: do not ignore the / filesystem
       * MacOSX/USB: no empty devices
       * Win32/Software: avoid a warning
       * Networks: improve the error message if deflat fails, thanks Walid Nouh
         for the suggestion
       * HP-UX/CPU: add a test-suite
       * HP-UX/CPU: identify the CPU on HP RX4640, (Yanick Durant)
       * HP-UX/Memory: hack to preinitialize the memory map (Yanick Durant)
       * t/README.t: only run the test if TEST_AUTHOR=1